# dda

./: README.md  pyproject.toml  setup.py
dda/: __init__.py  api_client.py  configuration.py  rest.py
dda/api/: __init__.py  agent_api.py  agent_list_api.py  attachment_api.py  database_list_api.py  document_api.py  document_list_api.py  folder_api.py  form_list_api.py  (+3 more)
docs/: Agent.md  AgentApi.md  AgentJob.md  AgentListApi.md  AgentListResponse.md  AttachmentApi.md  Database.md  DatabaseListApi.md  DatabaseListResponse.md  Document.md  DocumentApi.md  DocumentListApi.md  DocumentListEntry.md  DocumentListResponse.md  FolderApi.md  FolderOperations.md  Form.md  FormListApi.md  FormListResponse.md  Link.md  View.md  ViewColumnDesign.md  ViewDesignApi.md  ViewDesignResponse.md  ViewEntry.md  ViewEntryListApi.md  ViewEntryListResponse.md  ViewListApi.md  ViewListResponse.md
test/: test_agent.py  test_agent_api.py  test_agent_job.py  test_agent_list_api.py  test_agent_list_response.py  test_attachment_api.py  test_database.py  test_database_list_api.py  test_database_list_response.py  test_document.py  test_document_api.py  test_document_list_api.py  test_document_list_entry.py  test_document_list_response.py  test_folder_api.py  test_folder_operations.py  test_form.py  test_form_list_api.py  test_form_list_response.py  test_link.py  test_view.py  test_view_column_design.py  test_view_design_api.py  test_view_design_response.py  test_view_entry.py  test_view_entry_list_api.py  test_view_entry_list_response.py  test_view_list_api.py  test_view_list_response.py
(+19 files in other folders)
