[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dda"
version = "1.0.0"
authors = [
  { name="Radim Jaeger", email="rjaeger@sysnet.cz" },
]
description = "IBM Domino Data API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
]

[project.urls]
"Homepage" = "https://github.com/radimjager/dda"
